--- a/index.html
+++ b/index.html
@@ -93,25 +93,25 @@
 
                 <h2>Hébergements à Marseille</h2>
 
-                    <section class="cartes">
-                        <div class="box-carte-hebergement">
-                            <img src="images/hebergements/fred-kleber.jpg" alt="Hôtel du port">
-                                <div class="card-content">
-                                    <h3>Hôtel du port</h3>
-                                        <p>Nuit à partir de 52<em class="euro">€</em></p>
-                                            <div class="card-rating">
-                                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                                                <span class="sr-only">Note de 4 sur 5</span>
-                                            </div>
-                                    </div>
-                            </div>
+                        <section class="cartes">
+                            <a href="" class="box-carte-hebergement">
+                                <img src="images/hebergements/fred-kleber.jpg" alt="Hôtel du port">
+                                    <div class="card-content">
+                                        <h3>Hôtel du port</h3>
+                                            <p>Nuit à partir de 52<em class="euro">€</em></p>
+                                                <div class="card-rating">
+                                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                                    <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                                    <span class="sr-only">Note de 4 sur 5</span>
+                                                </div>
+                                        </div>
+                            </a>
 
 
-                            <div class="box-carte-hebergement">
+                            <a href="" class="box-carte-hebergement">
                                 <img src="images/hebergements/febrian-zakaria.jpg" alt="Hôtel chez Amina">
                                     <div class="card-content">
                                         <h3>Hôtel Chez Amina</h3>
@@ -125,10 +125,10 @@
                                                     <span class="sr-only">Note de 4 sur 5</span>
                                                 </div>
                                     </div>
-                            </div>
+                            </a>
 
 
-                            <div class="box-carte-hebergement">
+                            <a href="" class="box-carte-hebergement">
                                 <img src="images/hebergements/reisetopia.jpg" alt="Hôtel Les mouettes">
                                     <div class="card-content">
                                         <h3>Hôtel Les mouettes</h3>
@@ -141,10 +141,10 @@
                                                     <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                                     <span class="sr-only">Note de 4 sur 5</span>
                                                 </div>
-                                        </div>
-                            </div>
+                                    </div>
+                            </a>
 
-                            <div class="box-carte-hebergement">
+                            <a href="" class="box-carte-hebergement">
                                 <img src="images/hebergements/annie-spratt.jpg" alt="Hôtel de la mer">
                                     <div class="card-content">
                                         <h3>Hôtel de la mer</h3>
@@ -157,10 +157,10 @@
                                                     <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                                     <span class="sr-only">Note de 4 sur 5</span>
                                                 </div>
-                                        </div>
-                            </div>
+                                    </div>
+                            </a>
 
-                            <div class="box-carte-hebergement">
+                            <a href="" class="box-carte-hebergement">
                                 <img src="images/hebergements/marcus-loke.jpg" alt="Auberge La Canebière">
                                     <div class="card-content">
                                         <h3>Auberge La Canebière</h3>
@@ -174,10 +174,10 @@
                                                     <span class="sr-only">Note de 4 sur 5</span>
                                                 </div>
                                     </div>
-                            </div>
+                            </a>
         
 
-                            <div class="box-carte-hebergement">
+                            <a href="" class="box-carte-hebergement">
                                 <img src="images/hebergements/nicate-lee.jpg" alt="Auberge Le Panier">
                                     <div class="card-content">
                                         <h3>Auberge Le Panier</h3>
@@ -190,10 +190,11 @@
                                                     <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                                     <span class="sr-only">Note de 4 sur 5</span>
                                                 </div>
-                                        </div>
-                                </div>
-    </section>
-         <a href="" class="afficher-plus"><strong>Afficher plus</strong></a>  
+                                    </div>
+                            </a>
+            </section>
+
+            <a href="" class="afficher-plus"><strong>Afficher plus</strong></a>  
 
                 </section>
 
@@ -267,9 +268,9 @@
             </div>
 
 
-            <section id="activite" class="Activites"> 
+        <section id="activite" class="Activites"> 
 
-                <div class="Activites-marseille" >
+            <div class="Activites-marseille" >
                     <h2>Activités à Marseille</h2>
                 </div>
 
