--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 </figure>
                 <nav class="header-nav">
                     <ul class="liste-nav">
-                        <li class="item-nav centrer-flex">
+                        <li class="item-nav hovermobile">
                             <a class="centrer-flex" href="#hebergement">Hébergements</a>
                         </li>
-                        <li class="item-nav centrer-flex">
+                        <li class="item-nav hovermobile">
                             <a class="centrer-flex" href="#activite">Activités</a>
                         </li>
                     </ul>
