final avant soutenance

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="main-container">
         <header>
-            <section class="header-accueil">
+            <div class="header-accueil">
                 <figure class="header-logo">
                     <a href="#">
                         <img src="images/logo/Logo.svg" alt="booki-logo">
@@ -35,7 +35,7 @@
                         </li>
                     </ul>
                 </nav>
-            </section>
+            </div>
             <section class="header-presentation">
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre-ville ou en pleine nature</p>
@@ -45,7 +45,7 @@
         <section class="section-recherche">
 
 
-            <form action="" method="get">
+            <form>
 
                 <label for="recherche"> <i class="fa-solid fa-location-dot ping"></i></label>
                     <input type="search" name="search" class="search" id="recherche" placeholder="Marseille, France">
@@ -61,7 +61,7 @@
                     <h2>Filtres</h2> 
 
                     <div tabindex="0" class="box-filtre">
-                            <img class="filtre-logo centrer-flex" src ="images/logo/Property 1=price.svg" alt="icone billet">
+                            <img class="filtre-logo centrer-flex" src="images/logo/price.svg" alt="icone billet">
                             <h3>Economique</h3>
                         </div>
 
@@ -71,12 +71,12 @@
                         </div>
 
                         <div tabindex="0" class="box-filtre">
-                            <img class="filtre-logo centrer-flex" src ="images/logo/Property 1=romantic.svg" alt="icone Romantiques">
+                            <img class="filtre-logo centrer-flex" src="images/logo/romantic.svg" alt="icone Romantiques">
                             <h3>Romantique</h3>
                         </div>
 
                         <div tabindex="0" class="box-filtre">
-                            <img class="filtre-logo centrer-flex" src ="images/logo/Property 1=fire.svg" alt="icone pépites">
+                            <img class="filtre-logo centrer-flex" src="images/logo/fire.svg" alt="icone pépites">
                             <h3>Nos pépites</h3>
                         </div>
 
@@ -334,7 +334,8 @@
                     </ul>
                 </div>
 
-        </footer>
-    </body>
+      </footer>
+    </div>
+</body>
 
 </html>
