--- a/index.html
+++ b/index.html
@@ -60,25 +60,25 @@
 
                     <h2>Filtres</h2> 
 
-                    <div tabindex="0" class="box-filtre">
+                        <a href="" tabindex="0" class="box-filtre">
                             <img class="filtre-logo centrer-flex" src="images/logo/price.svg" alt="icone billet">
                             <h3>Economique</h3>
-                        </div>
+                        </a>
 
-                        <div tabindex="0" class="box-filtre">
+                        <a href="" tabindex="0" class="box-filtre">
                             <img class="filtre-logo centrer-flex" src="images/logo/icon-fam.svg" alt="icone famille">
                             <h3>Familial</h3>
-                        </div>
+                        </a>
 
-                        <div tabindex="0" class="box-filtre">
+                        <a href="" tabindex="0" class="box-filtre">
                             <img class="filtre-logo centrer-flex" src="images/logo/romantic.svg" alt="icone Romantiques">
                             <h3>Romantique</h3>
-                        </div>
+                        </a>
 
-                        <div tabindex="0" class="box-filtre">
+                        <a href="" tabindex="0" class="box-filtre">
                             <img class="filtre-logo centrer-flex" src="images/logo/fire.svg" alt="icone pépites">
                             <h3>Nos pépites</h3>
-                        </div>
+                        </a>
 
                     </div>
     
